# servopack

./: .gitignore  Makefile  README.md  nga1244_1:30.tcl  rigol_eth.tcl  servopack.c  translate.tcl
accelerometer_firmware/: Makefile  accelerometer_firmware.ino
arduino/: uno_servopack.ino
arduino/uno_servopack/: uno_servopack.ino
esp32_firmware/: Makefile
esp32_module/: Makefile
node_telnet/: README.md  nga1244_100  node_telnet.ino  servo.py  test
obsolete/pic/: README.md  usart.h
obsolete/scripts/: s_3Hz_9.7mm_0.35g.tcl  s_6Hz_1.73mm_0.25g.tcl
opencv/: b4_5  b4_5.g  detect_markers.py  frame_1920_1080.py  homography.py  homography_ref.py  movie_blocks.py  movie_blocks_bg.py
pic/: servopack.c
preprocess/: CMakeLists.txt  FindGZIP.cmake  README.md  SimpleOpt.h  burst.m  codes2pulses.c  displacement_data  integrate.m  pulses2wav.c  quantise.1  quantise.cxx  quantise_esp32.awk  quantise_pic.awk  quantise_pic.cxx  quantise_uno.awk
preprocessing/: README.md  bands.m  burst.m  codes2pulses.c  man2cxx  pulses2wav.c  quantise.1  quantise.cxx  wavelet.m
python/: README.md  setup.py
python/examples/: test
python_controller/: README.md  servo.py  setup.py
python_controller/src/: run  transfer
python_postprocessing/: README.md  frame_1920_1080.py  setup.py
python_postprocessing/example_data/: b4_5  b4_5.g  frame.py.example
python_postprocessing/src/: detect_markers  frame.py  homography  homography_ref  make_marker  movie_blocks  movie_blocks_bg
scope/: README.md  rigol.tcl  rigol_eth.m
scripts/: README.md  circle_15mm.tcl  circle_5mm.tcl  home.tcl  s_10Hz_0.87mm_0.35g.tcl  s_10Hz_2.48mm_1.00g.tcl  s_2Hz_10mm_0.16g.tcl  s_2Hz_15.5mm_0.25g.tcl  s_4Hz_5.44mm_0.35g.tcl  s_5Hz_10mm_1.00g.tcl  s_5Hz_3.48mm_0.35g.tcl  s_6Hz_2.42mm_0.35g.tcl  sinus.tcl  translate.tcl
